# msdiff

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  msdiff_mols.csv  setup.cfg  tox.ini
examples/: README.md
examples/conductivity/2_comp/: conductivity_test_data.csv  msdiff_out.csv  msdiff_tp.csv
examples/conductivity/3_comp/: conduct_3comp.csv  msdiff_out.csv  msdiff_tp.csv
examples/conductivity/avg/: conductivity_avg.csv  msdiff_out.csv  msdiff_post.csv
examples/diffusion/avg/: diffusion_c2c1im_avg.csv  msdiff_out.csv
examples/diffusion/ntf2/: msd_ntf2.csv  msdiff_out.csv
examples/diffusion/orthoboxy/: msd_H2O_#2_XY.csv  msd_H2O_#2_Z.csv  msdiff_out.csv
examples/diffusion/standard_deviation/: msdiff_out.csv
examples/emim/: msdiff_out.csv
examples/ntf2/: msdiff_mols.csv  msdiff_out.csv
src/msdiff/: __init__.py  __version__.py
src/msdiff/argparser/: __init__.py  argparser.py
src/msdiff/cli/: __init__.py  entrypoint.py
src/msdiff/conductivity/: __init__.py  ionic_conductivity.py  output.py
src/msdiff/diff_coeff/: __init__.py  diff_coeff.py  output.py
src/msdiff/diffusion/: __init__.py  (+3 more)
test/test_args/: test_clargs.py
test/test_cli/: test_entrypoint.py
test/test_conductivity/: test_input.py  test_linear_fit.py  test_transport_numbers.py
test/test_diff_functions/: test_linear_region.py
test/test_diffusion/: test_diff_coeff.py  test_hummer_correction.py  test_viscosity.py
test/test_input/: test_input_process.py
test/test_linear_regression/: test_hummer_correction.py  test_linear_fit.py  test_linear_region.py
(+15 files in other folders)
