[metadata]
name = msdiff
version = attr: msdiff.__version__.__version__
long_description = file: README.md
long_description_content_type = text/markdown
author = "Tom Frömbgen"
license = MIT
license_files = LICENSE.md
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Typing :: Typed

[options]
packages = find:
install_requires =
    lmfit
    matplotlib
    numpy
    pandas
python_requires = >=3.7
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    msdiff = msdiff:console_entry_point

[options.extras_require]
dev =
    black
    covdefaults
    coverage
    pre-commit
    pylint
    pytest
    tox

[options.package_data]
msdiff =
    py.typed
